# Fall2019-STM-

./: .gitignore  CMakeLists.txt  README.md  data_specification.txt
3DUltrasoundGUI/: CMakeLists.txt
gui_src/3DUltrasound/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  sonogram_data.cpp  sonogram_data.h  sonogram_structure.h  visualizer.cpp  visualizer.h  visualizer.hpp
gui_src/build-3DUltrasound-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: 3DUltrasound  3DUltrasound.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
gui_src/build-3DUltrasound-Desktop_x86_darwin_generic_mach_o_64bit-Debug/3DUltrasound_autogen/EWIEGA46WW/: moc_mainwindow.cpp
gui_src/build-3DUltrasound-Desktop_x86_darwin_generic_mach_o_64bit-Debug/3DUltrasound_autogen/include/: ui_mainwindow.h
include/Visualization/: visualizer.hpp
src/: CMakeLists.txt  Makefile  binary_reader.cpp  binary_reader.h  main.cpp  safe_queue.h  server.cpp
src/Visualization/: CMakeLists.txt  visualizer.cpp
test/: CMakeLists.txt  README.md  old.cpp  test_visualizer.cpp
